[project]
name = "reinforcement-learning-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[toy-text]>=1.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
]
